WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276300
[iOS 18] Undo voice command in Mail compose view does not fully undo dictated text
https://bugs.webkit.org/show_bug.cgi?id=276300
Summary
[iOS 18] Undo voice command in Mail compose view does not fully undo dictated...
Wenson Hsieh
Reported
2024-07-07 15:09:10 PDT
rdar://126653644
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-07-07 16:00:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30552
EWS
Comment 2
2024-07-08 09:15:53 PDT
Committed
280737@main
(90ab262c20a7): <
https://commits.webkit.org/280737@main
> Reviewed commits have been landed. Closing PR #30552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug